--- a/index.html
+++ b/index.html
@@ -13,14 +13,25 @@
 	<p>
 		<strong> 1. </strong> Vytvoř program, který se zeptá uživatele ("vstup"), na jeho Jméno, Příjmení a rok narození. Na výstupu vypiš jeho Jméno Příjmení a Věk. <br />
 		<i> Filip Procházka 30 </i> - ukázkový výstup 
-		<br /> 
-
-		<strong> 2. </strong> Přidej do programu "vstup" uživatele s jeho oblíbenou barvou ("anglicky") s tím, že celý výpis s úkolu č.1. obarvíš danou barvou, ze vstupu uživatele. <br />
 	</p>
-	<br />
-	<strong> "vstup" = funkce prompt() </strong>
 
-	<div class="vystupProgramu"></div>
+	<button class="button" onclick="zobrazitText()">Vyplnit údaje</button>
+
+	<p>
+		<span class="uzivatel"></span>
+	</p>
+
+	<p>
+		<strong> 2. </strong> Přidej do programu "vstup" uživatele s jeho oblíbenou barvou ("anglicky") s tím, že celý výpis s úkolu č.1. obarvíš danou barvou, ze vstupu uživatele.
+	<br />
+		<strong> "vstup" = funkce prompt()</strong>
+	</p>
+
+	<button class="button hidden" onclick="obarvitText()">Zadat oblíbenou barvu</button>
+
+	<p>
+		<span class="uzivatel hidden"></span>
+	</p>
 	<script src="main.js"></script>
 </body>
 </html>
